--- a/package.json
+++ b/package.json
@@ -16,29 +16,25 @@
     "deploy_bsc_testnet": "npx hardhat deploy --network bsc_testnet --reset",
     "deploy_polygon_testnet": "npx hardhat deploy --network polygon_testnet --reset",
     "deploy_local": "npx hardhat deploy --network localhost --reset",
-    "run_node": "npx hardhat node",
+    "run_node": "npx hardhat node --no-deploy",
     "build-regex": "npx solregex2 --name NameLabelRegex '(xn--)?[a-z0-9]+(-[a-z0-9]+)*' > 'contracts/utils/NameLabelRegex.sol'"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.2.0",
-    "@openzeppelin/contracts-upgradeable": "^4.2.0",
-    "bn.js": "^5.2.0",
-    "colors": "^1.4.0",
-    "hardhat": "^2.2.1",
     "hardhat-abi-exporter": "^2.8.0",
     "hardhat-contract-sizer": "^2.0.3",
-    "hardhat-ethers": "^1.0.1",
     "ipfs-http-client": "^56.0.1",
     "solregex2": "^0.4.4",
     "truffle-flattener": "^1.6.0"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^2.1.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/hardhat-upgrades": "^1.9.0",
+    "@openzeppelin/contracts": "^4.6.0",
+    "@openzeppelin/contracts-upgradeable": "^4.6.0",
+    "@openzeppelin/hardhat-upgrades": "^1.17.0",
     "bn.js": "^5.2.0",
     "chai": "^4.3.4",
     "colors": "^1.4.0",
@@ -46,8 +42,10 @@
     "eth-sig-util": "^3.0.1",
     "ethereum-waffle": "^3.3.0",
     "ethereumjs-util": "^7.1.0",
-    "ethers": "^5.4.1",
-    "hardhat-deploy": "^0.7.5",
+    "ethers": "^5.6.5",
+    "hardhat": "^2.9.3",
+    "hardhat-deploy": "^0.11.4",
+    "hardhat-ethers": "^1.0.1",
     "web3": "^1.7.1"
   }
 }
