--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@chainlink/contracts": "^0.4.2",
     "hardhat-abi-exporter": "^2.8.0",
     "hardhat-contract-sizer": "^2.0.3",
     "ipfs-http-client": "^56.0.1",
