--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "deploy_polygon_testnet": "npx hardhat deploy --network polygon_testnet --reset",
     "deploy_local": "npx hardhat deploy --network localhost --reset",
     "run_node": "npx hardhat node --no-deploy",
-    "build-regex": "npx solregex2 --name NameLabelRegex '(xn--)?[a-z0-9]+(-[a-z0-9]+)*' > 'contracts/utils/NameLabelRegex.sol'"
+    "abi": "npx hardhat export-abi"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +27,7 @@
     "hardhat-abi-exporter": "^2.8.0",
     "hardhat-contract-sizer": "^2.0.3",
     "ipfs-http-client": "^56.0.1",
+    "lodash": "^4.17.21",
     "solregex2": "^0.4.4",
     "truffle-flattener": "^1.6.0"
   },
@@ -45,7 +46,7 @@
     "ethereum-waffle": "^3.3.0",
     "ethereumjs-util": "^7.1.0",
     "ethers": "^5.6.9",
-    "hardhat": "^2.9.3",
+    "hardhat": "^2.11.1",
     "hardhat-deploy": "^0.11.4",
     "hardhat-ethers": "^1.0.1",
     "web3": "^1.7.1"
