--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "deploy_bsc_mainnet": "npx hardhat deploy --network bsc_mainnet",
     "deploy_bsc_testnet": "npx hardhat deploy --network bsc_testnet --reset",
     "deploy_polygon_testnet": "npx hardhat deploy --network polygon_testnet --reset",
-    "deploy_local": "npx hardhat deploy --network localhost --reset",
+    "deploy_local": "npx hardhat clean && npx hardhat deploy --network localhost --reset",
     "run_node": "npx hardhat node --no-deploy",
     "abi": "npx hardhat export-abi"
   },
@@ -45,7 +45,7 @@
     "ethereum-waffle": "^3.3.0",
     "ethereumjs-util": "^7.1.0",
     "ethers": "^5.6.9",
-    "hardhat": "^2.11.1",
+    "hardhat": "^2.11.2",
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-deploy": "^0.11.4",
     "hardhat-ethers": "^1.0.1",
